# viper

./: CLAUDE.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  COMPLEXITY_PROOFS.md  EXECUTION_FRAMEWORK.md  OPTIMIZER_NOTES.md
proofs/: viper_complexity.lean
scripts/: phase0_status.py  setup_lean.sh  setup_phase0.sh  test_compatibility.py
